apps/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-route
spec:
  hostnames:
    - gitea.hridaya.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
